MDEV-7167: innodb.innodb_bug12902967 fails in buildbot on Windows

Problem is that there is additional error message from function
that is not really needed now.